# llm_exercise

./: .gitattributes  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.claude/: settings.json
dataset/: omni_dataset.py
hybrid_search/: README.md  bm25_search.py  compare_search.py  documents.py  formula_walkthrough.py  hybrid_search.py  pyproject.toml  requirements.txt  utils.py  vector_search.py
lerobot-mujoco-tutorial/: 1.collect_data.ipynb  2.visualize_data.ipynb  3.train.ipynb  4.deploy.ipynb  5.language_env.ipynb  6.visualize_data.ipynb  7.pi0.ipynb  8.smolvla.ipynb  README.ko.md  image_transforms.py  pi0_omy.yaml  pyproject.toml  requirements.txt  smolvla_omy.yaml  train_model.py
lerobot-mujoco-tutorial/demo_data_example/meta/: info.json  stats.json  tasks.parquet
lerobot-mujoco-tutorial/demo_data_example/meta/episodes/chunk-000/: file-000.parquet
lerobot-mujoco-tutorial/mujoco_env/: ik.py  y_env.py
lerobot-mujoco-tutorial/scripts/: patch_lerobot_groot.py
llm-from-scratch/: Chapter_1_Exercise_Vector Space.ipynb  Chapter_2_Exercise_Dataset.ipynb  Chapter_3_Excercise_Attention.ipynb  Chapter_4_Excercise_GPT.ipynb  Chapter_5_Excercise_Pretraining.ipynb  Chapter_7_Exercise_Follow_Instructions.ipynb  Chapter_7_Exercise_Follow_Instructions_dpo.ipynb  pyproject.toml
minimind/: README.md  README_en.md  README_ko.md  TRAINER_GUIDE.md  eval_llm.py  pyproject.toml
minimind-d/: README.md  eval_dllm.py
minimind-d/dataset/: __init__.py  lm_dataset.py
minimind-d/model/: __init__.py  model_minimind.py  model_minimind_dllm.py
minimind-d/scripts/: chat_dllm.py  web_dllm.py
minimind-d/trainer/: train_dllm.py  trainer_utils.py
minimind-l/: README.md  run_linear.py
minimind-l/model/: model_minimind_linear.py
minimind-o/: README.md  README_en.md  README_ko.md  eval_omni.py
minimind-o/dataset/: omni_dataset.py
minimind-o/model/: model_minimind.py  model_omni.py
minimind-o/scripts/: convert_omni.py  web_demo_omni.py
minimind-o/trainer/: train.sh  train_sft_omni.py  trainer_utils.py
minimind-o/webui/: web_demo.html  web_demo.py
minimind-v/: README.md  README_en.md  README_ko.md  TRAINER_GUIDE.md  eval_vlm.py  pyproject.toml
minimind-v/dataset/: lm_dataset.py
minimind-v/model/: model_init.md  model_vlm.py
minimind-v/scripts/: convert_vlm.py  web_demo_vlm.py
minimind-v/trainer/: train_pretrain_vlm.py  train_sft_vlm.py  trainer_utils.py
minimind/dataset/: lm_dataset.py
minimind/model/: model_lora.py
minimind/scripts/: chat_api.py  convert_model.py  eval_toolcall.py  serve_openai_api.py  web_demo.py
minimind/trainer/: TRAINER_GUIDE.md  rollout_engine.py  train_agent.py  train_distillation.py  train_dpo.py  train_full_sft.py  train_grpo.py  train_lora.py  train_ppo.py  train_pretrain.py  train_tokenizer.py  trainer_utils.py
model/: model_minimind.py  model_omni.py
trainer/: train_grpo.py  train_pretrain_vlm.py  train_sft_vlm.py  trainer_utils.py
webui/: web_demo.py
