[project]
name = "llm-exercise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "addict==2.4.0",
    "datasets==3.6.0",
    "datasketch==1.6.4",
    "einops==0.8.1",
    "flask==3.0.3",
    "flask-cors==6.0.1",
    "flask-sock==0.7.0",
    "funasr==1.3.1",
    "gradio==5.49.1",
    "jieba==0.42.1",
    "jinja2==3.1.2",
    "jsonlines==4.0.0",
    "lerobot",
    "librosa==0.11.0",
    "marshmallow==3.22.0",
    "matplotlib>=3.10.9",
    "modelscope==1.37.0",
    "modelscope-studio==1.6.1",
    "mujoco==3.1.6",
    "ngrok==1.4.0",
    "nltk==3.8",
    "numpy>=2.1",
    "onnxruntime==1.23.2",
    "openai==1.59.6",
    "peft==0.7.1",
    "pillow>=9.5,<12",
    "psutil==5.9.8",
    "pyarrow==23.0.1",
    "pyautogui>=0.9.54",
    "pydantic==2.11.5",
    "pydub==0.25.1",
    "python-multipart==0.0.22",
    "rich==13.7.1",
    "safetensors==0.5.3",
    "scikit-learn>=1.6",
    "scipy>=1.15.3",
    "sentence-transformers==2.3.1",
    "simhash==2.1.2",
    "snac==1.2.1",
    "soundfile==0.13.1",
    "speechbrain==1.1.0",
    "streamlit==1.50.0",
    "swanlab==0.7.11",
    "tiktoken==0.10.0",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchvision==0.21.0",
    "transformers==4.57.6",
    "trl==0.13.0",
    "ujson==5.1.0",
    "wandb==0.18.3",
]

[tool.uv.sources]
lerobot = { git = "https://github.com/huggingface/lerobot.git", rev = "10b7b3532543b4adfb65760f02a49b4c537afde7" }
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
