[project]
name = "lerobot-mujoco-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "av>=15.1.0",
    "datasets>=4.0.0,<5.0.0",
    "ipykernel>=7.3.0",
    "jsonlines>=4.0.0",
    "lerobot[pi,smolvla]==0.5.0",
    "matplotlib",
    "mujoco==3.10.0",
    "opencv-python",
    "pandas>=2.3.3",
    "pillow",
    "pyautogui",
    "safetensors==0.5.3",
    "scipy",
    "termcolor",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchcodec>=0.10.0",
    "torchvision==0.21.0",
    "transformers>=5.4,<5.6",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
