[project]
name = "llm-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "gensim>=4.3.3",
    "ipykernel>=6.29",
    "jupyter>=1.1.1",
    "matplotlib>=3.10",
    "numpy>=2.1",
    "pandas>=2.2",
    "requests>=2.32",
    "tiktoken>=0.13.0",
    "torch==2.6.0",
    "tqdm>=4.67",
    "transformers==4.57.6",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
