[project]
name = "llm-exercise-v"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "datasets==3.6.0",
    "gradio>=5.49.1",
    "numpy>=2.1",
    "pillow>=11.0",
    "pyarrow==23.0.1",
    "swanlab==0.7.11",
    "torch==2.6.0",
    "transformers==4.57.6",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
